--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro';
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 interface Props {
 	title: string;
@@ -12,7 +13,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Lauri Annala's website" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
@@ -21,6 +22,7 @@ const { title } = Astro.props;
 	<body>
 		<Navbar />
 		<slot />
+		<SpeedInsights />
 	</body>
 </html>
 <style is:global>
