--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,78 +1,76 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Main from '../components/Main.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Main from "../components/Main.astro";
 ---
 
 <Layout title="Lauri Annala">
-	<Main>
-		<h1>Lauri Annala</h1>
-		<p class="instructions">
-			Hello there traveller! This is my website, here you can find my projects, stories and other stuff I've been working on.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://github.com/lauriannala"
-				target="_blank"
-				title="Github"
-				body="My personal github profile."
-			/>
-			<Card
-				href="https://www.linkedin.com/in/lauri-annala-56b356120/"
-				target="_blank"
-				title="Linkedin"
-				body="My linkedin profile."
-			/>
-		</ul>
-	</Main>
+  <Main>
+    <h1>Lauri Annala</h1>
+    <p class="instructions">
+      Hello there traveller! This is my website, here you can find my projects,
+      stories and other stuff I've been working on.
+    </p>
+    <ul role="list" class="link-card-grid">
+      <Card
+        href="https://github.com/lauriannala"
+        target="_blank"
+        title="Github"
+        body="My personal github profile."
+      />
+    </ul>
+  </Main>
 </Layout>
 
 <style>
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
+  .astro-a {
+    position: absolute;
+    top: -32px;
+    left: 50%;
+    transform: translatex(-50%);
+    width: 220px;
+    height: auto;
+    z-index: -1;
+  }
+  h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 1em;
+  }
+  .text-gradient {
+    background-image: var(--accent-gradient);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400%;
+    background-position: 0%;
+  }
+  .instructions {
+    margin-bottom: 2rem;
+    border: 1px solid rgba(var(--accent-light), 25%);
+    background: linear-gradient(
+      rgba(var(--accent-dark), 66%),
+      rgba(var(--accent-dark), 33%)
+    );
+    padding: 1.5rem;
+    border-radius: 8px;
+  }
+  .instructions code {
+    font-size: 0.8em;
+    font-weight: bold;
+    background: rgba(var(--accent-light), 12%);
+    color: rgb(var(--accent-light));
+    border-radius: 4px;
+    padding: 0.3em 0.4em;
+  }
+  .instructions strong {
+    color: rgb(var(--accent-light));
+  }
+  .link-card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+    gap: 2rem;
+    padding: 0;
+  }
 </style>
